Feature/auth jwt (#1)
* creation branch features

* auth_jwt

* refresh token

* gitignore

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://admin:admin!Refund@parcelmate.prddtz9.mongodb.net/ParcelMateDb?tls=true&tlsAllowInvalidCertificates=true
+JWT_SECRET_KEY=HYS2LFVbVvaULr_6S1K5j4R6kfumokmSzYH0kyg2D_s
+# test
